<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.BreweryDetailsActivity">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupBreweries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="
        myFavoriteText,
        myOrdene,
        order_by_txt,
        order_by_btn,
        recycler_search_result" />

    <TextView
        android:id="@+id/myFavoriteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cervejarias_que_voc_avaliou"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myOrdene"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultados"
        android:textColor="@color/light_black"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@+id/myFavoriteText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/order_by_txt"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/ordenar_por"
        android:textColor="@color/light_black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/myOrdene"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <ImageButton
        android:id="@+id/order_by_btn"
        android:layout_width="24dp"
        android:layout_height="26dp"
        android:layout_marginEnd="18dp"
        android:background="@color/yellowBees"
        android:contentDescription="@string/order_by_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/order_by_txt"
        app:srcCompat="@drawable/order_by_btn"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_by_txt"
        tools:listitem="@layout/card_my_rate" />

    <TextView
        android:id="@+id/nenhumaCeva"
        android:layout_width="296dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/nenhuma_cervejaria_avaliada"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNenhumaCeva"
        android:layout_width="328dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/ainda_nao_avaliou"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nenhumaCeva" />

</androidx.constraintlayout.widget.ConstraintLayout>