<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".ui.main.search.SearchResultFragment">

    <TextView
        android:id="@+id/user_opinion_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/opinion_string"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/results"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/user_opinion_text"
        app:layout_constraintTop_toBottomOf="@id/user_opinion_text" />

    <TextView
        android:id="@+id/orderBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/order_by"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/user_opinion_text"
        app:layout_constraintTop_toBottomOf="@id/count_results" />

    <ImageButton
        android:id="@+id/order_by_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:background="@color/background"
        android:src="@drawable/order_by_btn"
        app:layout_constraintBottom_toBottomOf="@+id/orderBy"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_choice"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderBy"
        tools:listitem="@layout/card_result" />

</androidx.constraintlayout.widget.ConstraintLayout>