<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_one"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:cardCornerRadius="32dp">

        <TextView
            android:id="@+id/initial_brewery_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_name"
            android:textColor="@color/yellowBees"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle" />

        <TextView
            android:id="@+id/brewery_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/brewery_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle"
            tools:ignore="NotSibling" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:contentDescription="@string/fav_btn_description"
            app:layout_constraintBottom_toBottomOf="@+id/share_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/share_btn"
            app:srcCompat="@drawable/fav_btn_black_stroke" />

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginEnd="13dp"
            android:background="@color/white"
            android:contentDescription="@string/share_btn_description"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintEnd_toStartOf="@+id/favorite_button"
            app:layout_constraintTop_toTopOf="@+id/circle"
            app:srcCompat="@drawable/share_btn">

        </ImageButton>

        <ImageView
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/yellow_circle_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle" />

        <ImageView
            android:id="@+id/star_rate"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/brewery_name_txt"
            app:layout_constraintTop_toBottomOf="@id/brewery_name_txt"
            android:src="@drawable/star_rate"/>

        <TextView
            android:id="@+id/rate_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="4,9"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/star_rate"
            app:layout_constraintStart_toEndOf="@id/star_rate"
            app:layout_constraintTop_toTopOf="@+id/star_rate" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/topic"
            app:layout_constraintBottom_toBottomOf="@+id/star_rate"
            app:layout_constraintStart_toEndOf="@id/rate_txt"
            app:layout_constraintTop_toTopOf="@+id/star_rate">

        </androidx.constraintlayout.utils.widget.ImageFilterView>


        <TextView
            android:id="@+id/brewery_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="Tipo"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/topic"
            app:layout_constraintStart_toEndOf="@id/topic"
            app:layout_constraintTop_toTopOf="@+id/topic" />

        <ImageView
            android:id="@+id/topic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:src="@drawable/topic"
            app:layout_constraintBottom_toBottomOf="@+id/brewery_type"
            app:layout_constraintStart_toEndOf="@id/brewery_type"
            app:layout_constraintTop_toTopOf="@+id/brewery_type" />

        <TextView
            android:id="@+id/distance_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="0,9km"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/topic2"
            app:layout_constraintStart_toEndOf="@id/topic2"
            app:layout_constraintTop_toTopOf="@+id/topic2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>